# musical_hash

./: .gitignore  .project  README.md  musical_hash.py  pyproject.toml  setup.py
doc/: LEGGIMI.md  LISEZ-MOI.md  LÉAME.md  api_documentation.md  读我档案.md
docs/: doc.md
musical_hash/: __init__.py  __main__.py  _musical_hash.py  _scales.py  constants.py  melody_to_bytes.py  musical_hash.py
test/: test_musical_hash.py  test_scales.py
