[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py35,py36,py36,py37,py38,py39

[testenv]
deps = coverage
       mido
       numpy
       wavio
commands = coverage run --source=musical_hash -m unittest discover
           coverage report -m
           python setup.py sdist
"""