[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py35,py36,py36,py37,py38,py39

[testenv]
deps = coverage
       mido
       numpy
       pycodestyle
       pydoc-markdown
       pylint
       wavio
commands = pycodestyle musical_hash test setup.py
           pylint musical_hash test setup.py
           coverage run --source=musical_hash -m unittest discover
           coverage report -m
           python setup.py sdist
           bash -c 'pydocmd simple musical_hash++ musical_hash.MusicalHash++ musical_hash.get_scale++ > doc/api_documentation.md'
whitelist_externals = /bin/bash
"""